--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 </head>
 <body>
     <h1>Hello world, I am 2570223</h1>
-    <a href="2570223-lab2.html">Linkt to my lab 2</a>
+    <a href="2570223-lab2.html">Link to my lab 2</a>
 </body>
 </html>
